maria db integration bug fix2